# cooktop

./: .travis.yaml  Cargo.toml  README.md  README.tpl
src/: lib.rs  parser.rs
src/gromacs/: lexer.rs  parser.rs
src/gromacs/parser/: defaults.rs
tests/: test_lexer.rs  test_parser.rs
tests/data/chignolin_gmx/: Cln_025.top  Cln_025_posre.itp
